# EPG-IRIB

./: .gitignore  README.md  epg.xml  generate_epg.py  pyproject.toml  remaining-work.md
.github/workflows/: ci.yml  update-epg.yml
tests/: test_generate_epg.py
tests/fixtures/: radio_quran_feed.json  radio_quran_page.html
